fix: model gorm property wrong
