# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Auth Service RESTful API",
+        "title": "Loan Backend API",
         "contact": {}
     },
     "paths": {
@@ -73,6 +73,57 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/dto.LoginRespData"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/login/dev": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "login dev",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.LoginDevReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.BaseJSONResp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/dto.LoginDevResp"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "data": {
+                                                            "$ref": "#/definitions/dto.LoginRespData"
+                                                        }
+                                                    }
+                                                }
+                                            ]
                                         }
                                     }
                                 }
@@ -202,6 +253,38 @@
                 }
             }
         },
+        "dto.LoginDevReq": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "description": "username or email, but swagger oauth2password need username field",
+                    "type": "string"
+                }
+            }
+        },
+        "dto.LoginDevResp": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "detail": {},
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.LoginReq": {
             "type": "object",
             "required": [
@@ -282,11 +365,11 @@
         }
     },
     "securityDefinitions": {
-        "BearerAuth": {
+        "OAuth2Password": {
             "description": "JWT Authorization header using the Bearer scheme (add 'Bearer ' prefix).",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
+            "type": "oauth2",
+            "flow": "password",
+            "tokenUrl": "/auth/login/dev"
         }
     }
 }
